# avionics

./: .gitignore  Cargo.toml  LICENSE  README.md  avionics-profile.toml
docs/: design.md
run/: deploy.sh
src/: device.rs  main.rs  primary_flight_display.rs  utils.rs  xplane_listener.rs  xplane_udp_client.rs
src/airspeed_indicator/: components.rs  mod.rs  systems.rs
src/altimeter/: components.rs  mod.rs  systems.rs
src/artificial_horizon/: components.rs  mod.rs  systems.rs
src/bank_angle_indicator/: components.rs  mod.rs  systems.rs
src/database/: ddl.rs  mod.rs  resources.rs
src/displays/: mod.rs  primary_flight_display.rs
src/heading_indicator/: components.rs  mod.rs  systems.rs
src/panel_left/: components.rs  mod.rs  systems.rs
src/panel_right/: components.rs  mod.rs  systems.rs
src/profiles/: components.rs  mod.rs  resources.rs  settings.rs  systems.rs  utils.rs
src/tachometer/: components.rs  mod.rs  systems.rs
src/turn_coordinator/: components.rs  mod.rs  systems.rs
src/vertical_speed_indicator/: components.rs  mod.rs  systems.rs
