[package]
name = "avionics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19"
serde = "1.0.188"
bincode = "1.3.1"
local-ip-address = "0.4.8"
bevy_renet = "0.0.9"
tokio = "1.32.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

