[package]
name = "avionics"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bincode = "1.3.1"
futures-lite = "1.13.0"
toml = "0.8.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

